--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,41 @@
 body{
     font-family: sans-serif;
 }
+h1{
+    font-size: 22px;
+    font-weight: bold;
+}
+/* ejercicio15 */
+a{
+    text-decoration: none;
+    font-size: 22px;
+    font-weight:bold;
+    color: black;
+    margin-bottom: 10px;
+    text-align:left;
+}
+.container{
+    display: inline-flex;
+    width: 30%;
+    justify-content: flex-start;
+    justify-content: space-around;
+}
+.btn{
+    flex-grow: 0;
+}
+/* ejercicio16 */
+p{
+    display: inline-flex;
+    font-size: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+p:hover{
+    color: rgb(55, 55, 226);
+}
+.wordHidden{
+    cursor: pointer;
+}
 #tabla{
     background-color: aqua;
     cursor: pointer;
@@ -13,6 +48,9 @@ ul{
 .tr12{
     cursor: pointer;
 }
-#btn{
+.btn{
+    cursor: pointer;
+}
+#hiddenStrong strong{
     cursor: pointer;
 }
